infra/kube/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  defaultBackend:
    service:
      name: backend-service
      port:
        number: 8083
